# data_and_ml

./: Dockerfile  README.md  churn_prediction.ipynb  pyproject.toml  request.sh
api/: classify.py  test_api.py
config/: logger.py  model.py
features_eng/: churn_prediction.ipynb
schema/: model_schema.py
