[project]
name = "ml-microservice-churn-predictions"
version = "0.1.0"
description = ""
authors = [
    { name = "Muhammad Sagor", email = "musagor78@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "loguru",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
